Offline changes api update
